[package]
name = "tokio-udt"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "1.*", features = [ "macros", "net", "io-util", "sync", "time", "rt-multi-thread" ] }
sha2 = "*"
once_cell = "*"
tokio-timerfd = "*"
socket2 = "*"
nix = "0.24.1"
bytes = "*"
