[package]
name = "tokio-udt"
version = "0.1.0-alpha.3"
edition = "2021"
license = "AGPL-3.0"
description = """
An implementation of UDP-based Data Transfer Protocol (UDT) based on Tokio primitives
"""
repository = "https://github.com/amatissart/tokio-udt"
keywords = ["udt", "udt4", "networking", "transport", "protocol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "1.*", features = [ "macros", "net", "io-util", "sync", "time", "rt-multi-thread" ] }
sha2 = "0.10.2"
once_cell = "1.12"
tokio-timerfd = "0.2"
socket2 = "0.4.4"
nix = "0.24.1"
bytes = "1.1"
